# SimpleMessagerDocs

./: CMakeLists.txt  data_models.md  openapi_full.yaml  readme.md  swagger-config.json
.github/workflows/: render.yml
http/: http_codes.md  methods.md
models/: chatroom.md  invite.md  message.md  session.md  user.md
restapi/: openapi.yaml
restapi/components/parameters/: _index.yaml  token.yaml
restapi/components/parameters/chatroom/: adminId.yaml  private.yaml  title.yaml
restapi/components/parameters/filter/: adminId.yaml  name.yaml  private.yaml  surname.yaml  title.yaml  type.yaml  userId.yaml  username.yaml
restapi/components/parameters/message/: content.yaml  type.yaml
restapi/components/parameters/pagination/: count_per_page.yaml  page_number.yaml
restapi/components/parameters/path/: messageId.yaml  roomId.yaml  userId.yaml
restapi/components/parameters/user/: name_required.yaml  password.yaml  surname.yaml  surname_required.yaml  username.yaml  username_required.yaml
restapi/components/responses/: Forbidden.yaml  InvalidTokenSpecified.yaml  NotFound.yaml  RequiredParameterNotSpecified.yaml  TokenNotSpecified.yaml  TooLarge.yaml  UnsupportedMediaType.yaml  _index.yaml
restapi/components/schemas/: AuthToken.yaml  Chatroom.yaml  Error.yaml  Invite.yaml  Message.yaml  NewMessage.yaml  User.yaml  _index.yaml
restapi/v1/account/: #account.md  signin.md  singout.md  singup.md
restapi/v1/rooms/: _.md  messages.md  rooms.md
restapi/v1/rooms/{roomid}/: _.md  (+5 more)
restapi/v1/users/: _.md  me.md  users.md  {user-id}.md
src/: CMakeLists.txt  main.cpp
(+5 files in other folders)
